--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <p>KARENA KAMU ADALAH ORANG YANG HEBAT</p>
         <span class="heart">💗💗💗</span>
         <br>
-        <img src="https://i.postimg.cc/yxw0S34d/AS003471-00.gif" alt="Forever Love">
+        <img src="https://drive.google.com/uc?export=view&id=1ptphCW2Yqo8Z_J0Cer6ZUSK9-4-2SLYM" alt="Forever Love">
         <br>
         <button onclick="goToPage(3)">Lanjut</button>
     </div>
@@ -106,7 +106,7 @@
     <div id="page3" class="container">
         <h2>🎥 You Are Still The One 🎥</h2>
         <video controls>
-            <source src="https://imgur.com/Un97tad" type="gabisa_ya?">
+            <source src="https://drive.google.com/uc?export=view&id=1XFmmM2FvYEKUEetkoc0Vh0SYOX1VOpLM" type="gabisa_ya?">
         </video>
         <br>
         <button onclick="goToPage(4)">Lanjut</button>
@@ -115,8 +115,8 @@
     <!-- Halaman 4 (GIF dan Terima Kasih) -->
     <div id="page4" class="container">
         <h2>🎉 I MISS YOU 🎉</h2>
-        <p>Kenapa Ga Terima?? BodoamaT nyenye</p>
-        <img src="https://i.postimg.cc/vHZNMpXS/8xf09f9880-1.webp" alt="wleee"> <!-- Pastikan file GIF ada di folder yang sama -->
+        <p>Kenapa Ga Terima?? Bodoamat nyenye</p>
+        <img src="https://drive.google.com/uc?export=view&id=1eNNTHH5A9TsJyHSYzZElBl0funZmMKOY" alt="wleee"> <!-- Pastikan file GIF ada di folder yang sama -->
     </div>
 
     <script>
