--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <div id="page2" class="container">
         <h2>🎉🎉HAPPY BIRTHDAY!!🎉🎉</h2>
         <h2>POPPY AMELIA NURBAIQ</h2>
+        <p><P>
         <p>SEMOGA DIUMUR 19 TAHUN INI KAMU SELALU BAHAGIA.</p>
         <p>KARENA KAMU ADALAH ORANG YANG HEBAT</p>
         <span class="heart">💗💗💗</span>
@@ -106,7 +107,7 @@
     <div id="page3" class="container">
         <h2>🎥 You Are Still The One 🎥</h2>
         <video controls>
-            <source src="https://drive.google.com/uc?export=view&id=1XFmmM2FvYEKUEetkoc0Vh0SYOX1VOpLM" type="gabisa_ya?">
+            <iframe src="https://drive.google.com/file/d/1eNNTHH5A9TsJyHSYzZElBl0funZmMKOY/preview" width="640" height="360" allowfullscreen></iframe>
         </video>
         <br>
         <button onclick="goToPage(4)">Lanjut</button>
