--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <p>KARENA KAMU ADALAH ORANG YANG HEBAT</p>
         <span class="heart">💗💗💗</span>
         <br>
-        <img src="https://drive.google.com/uc?export=view&id=1ptphCW2Yqo8Z_J0Cer6ZUSK9-4-2SLYM" alt="Forever Love">
+        <img src="https://ibb.co.com/9kTgvQD0" alt="Forever Love">
         <br>
         <button onclick="goToPage(3)">Lanjut</button>
     </div>
@@ -107,7 +107,7 @@
     <div id="page3" class="container">
         <h2>🎥 You Are Still The One 🎥</h2>
         <video controls>
-            <iframe src="https://drive.google.com/file/d/1eNNTHH5A9TsJyHSYzZElBl0funZmMKOY/preview" width="640" height="360" allowfullscreen></iframe>
+            <iframe src="https://youtu.be/0hDk0gJ__40" width="640" height="360" allowfullscreen></iframe>
         </video>
         <br>
         <button onclick="goToPage(4)">Lanjut</button>
@@ -117,7 +117,7 @@
     <div id="page4" class="container">
         <h2>🎉 I MISS YOU 🎉</h2>
         <p>Kenapa Ga Terima?? Bodoamat nyenye</p>
-        <img src="https://drive.google.com/uc?export=view&id=1eNNTHH5A9TsJyHSYzZElBl0funZmMKOY" alt="wleee"> <!-- Pastikan file GIF ada di folder yang sama -->
+        <img src="https://ibb.co.com/9kHMvcyx" alt="wleee"> <!-- Pastikan file GIF ada di folder yang sama -->
     </div>
 
     <script>
