--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <!-- Halaman 3 (Video) -->
     <div id="page3" class="container">
         <h2>🎥 You Are Still The One 🎥</h2>
-        <video controls>
-            <iframe src="https://youtu.be/0hDk0gJ__40" width="640" height="360" allowfullscreen></iframe>
+       <video controls>
+  <source src="https://youtu.be/0hDk0gJ__40" type="video/mp4">
         </video>
         <br>
         <button onclick="goToPage(4)">Lanjut</button>
