--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
     <div id="page3" class="container">
         <h2>🎥 You Are Still The One 🎥</h2>
        <video controls>
-  <source src="https://youtu.be/0hDk0gJ__40" type="video/mp4">
-        </video>
+  <source src="https://www.dropbox.com/scl/fi/56vllxo16qn973otplwta/video.mp4?rlkey=0jjjcosdiy77a58dd95l5odkk&st=imttx8iw&raw=1" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
         <br>
         <button onclick="goToPage(4)">Lanjut</button>
     </div>
