--- a/index.html
+++ b/index.html
@@ -106,10 +106,7 @@
     <!-- Halaman 3 (Video) -->
     <div id="page3" class="container">
         <h2>🎥 You Are Still The One 🎥</h2>
-       <video controls>
-  <source src="https://www.dropbox.com/scl/fi/56vllxo16qn973otplwta/video.mp4?rlkey=0jjjcosdiy77a58dd95l5odkk&st=imttx8iw&raw=1" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/0hDk0gJ__40" frameborder="0" allowfullscreen></iframe>
         <br>
         <button onclick="goToPage(4)">Lanjut</button>
     </div>
