--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <p>KARENA KAMU ADALAH ORANG YANG HEBAT</p>
         <span class="heart">💗💗💗</span>
         <br>
-        <img src="https://ibb.co.com/9kTgvQD0" alt="Forever Love">
+        <img src="https://i.postimg.cc/yxw0S34d/AS003471-00.gif" alt="Forever Love">
         <br>
         <button onclick="goToPage(3)">Lanjut</button>
     </div>
@@ -106,7 +106,7 @@
     <!-- Halaman 3 (Video) -->
     <div id="page3" class="container">
         <h2>🎥 You Are Still The One 🎥</h2>
-       <iframe width="560" height="315" src="https://www.youtube.com/embed/0hDk0gJ__40" frameborder="0" allowfullscreen></iframe>
+       <iframe width="140" height="78" src="https://www.youtube.com/embed/0hDk0gJ__40" frameborder="0" allowfullscreen></iframe>
         <br>
         <button onclick="goToPage(4)">Lanjut</button>
     </div>
@@ -115,7 +115,7 @@
     <div id="page4" class="container">
         <h2>🎉 I MISS YOU 🎉</h2>
         <p>Kenapa Ga Terima?? Bodoamat nyenye</p>
-        <img src="https://ibb.co.com/9kHMvcyx" alt="wleee"> <!-- Pastikan file GIF ada di folder yang sama -->
+        <img src="https://i.postimg.cc/vHZNMpXS/8xf09f9880-1.webp" alt="wleee"> <!-- Pastikan file GIF ada di folder yang sama -->
     </div>
 
     <script>
