--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- Halaman 2 -->
     <div id="page2" class="container">
-        <h2>🎉🎉HAPPY BIRTHDAY!!🎉🎉</h2>
+        <h2>🎉HAPPY BIRTHDAY!!🎉</h2>
         <h2>POPPY AMELIA NURBAIQ</h2>
         <p><P>
         <p>SEMOGA DIUMUR 19 TAHUN INI KAMU SELALU BAHAGIA.</p>
@@ -106,7 +106,7 @@
     <!-- Halaman 3 (Video) -->
     <div id="page3" class="container">
         <h2>🎥 You Are Still The One 🎥</h2>
-       <iframe width="140" height="78" src="https://www.youtube.com/embed/0hDk0gJ__40" frameborder="0" allowfullscreen></iframe>
+       <iframe width="240" height="135" src="https://www.dropbox.com/scl/fi/56vllxo16qn973otplwta/video.mp4?rlkey=0jjjcosdiy77a58dd95l5odkk&st=imttx8iw&dl=0" frameborder="0" allowfullscreen></iframe>
         <br>
         <button onclick="goToPage(4)">Lanjut</button>
     </div>
