--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <!-- Halaman 3 (Video) -->
     <div id="page3" class="container">
         <h2>🎥 You Are Still The One 🎥</h2>
-       <iframe width="240" height="135" src="https://www.dropbox.com/scl/fi/56vllxo16qn973otplwta/video.mp4?rlkey=0jjjcosdiy77a58dd95l5odkk&st=imttx8iw&dl=0" frameborder="0" allowfullscreen></iframe>
+       <iframe width="240" height="135" src="https://youtube.com/embed/izGgIHKQN8o" frameborder="0" allowfullscreen></iframe>
         <br>
         <button onclick="goToPage(4)">Lanjut</button>
     </div>
