--- a/index.html
+++ b/index.html
@@ -19,16 +19,6 @@
             justify-content: center;
             min-height: 100vh;
             padding: 20px;
-            position: relative;
-        }
-        body::before {
-            content: "❤️ ❤️ ❤️ ❤️ ❤️ ❤️";
-            font-size: 50px;
-            position: absolute;
-            top: 10%;
-            left: 50%;
-            transform: translateX(-50%);
-            opacity: 0.3;
         }
         .container {
             display: none;
@@ -51,7 +41,7 @@
             color: #ff4d4d;
             font-size: 16px;
         }
-        img, video {
+        img, iframe {
             width: 100%;
             max-width: 250px;
             height: auto;
@@ -59,24 +49,28 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-        .button-group {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
         button {
-            padding: 8px 16px;
-            font-size: 14px;
+            padding: 12px 20px;
+            font-size: 16px;
+            margin-top: 20px;
             cursor: pointer;
             background-color: #ff4d4d;
             color: white;
             border: none;
             border-radius: 20px;
             transition: 0.3s;
-            width: 45%;
+            width: 100%;
+            max-width: 200px;
+            display: block;
+            margin: auto;
         }
         button:hover {
             background-color: #b30000;
+        }
+        .heart {
+            color: red;
+            font-size: 28px;
+            margin: 10px 0;
         }
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -90,49 +84,58 @@
     <div id="page1" class="container active">
         <h2>HAII NURBAIQQ</h2>
         <p>This is Special For You</p>
+        <span class="heart">💖💖💖</span>
         <br>
         <img src="https://i.postimg.cc/66ZBN4jm/gif1.gif" alt="Love Image">
         <br>
-        <div class="button-group">
-            <button onclick="goToPage(2)">Lanjut</button>
-        </div>
+        <button onclick="goToPage(2)">Lanjut</button>
     </div>
 
     <!-- Halaman 2 -->
     <div id="page2" class="container">
         <h2>🎉HAPPY BIRTHDAY!!🎉</h2>
         <h2>POPPY AMELIA NURBAIQ</h2>
-        <p>SEMOGA DIUMUR 19 TAHUN INI KAMU SELALU BAHAGIA.</p>
+        <p>SEMOGA DI UMUR 19 TAHUN INI KAMU SELALU BAHAGIA.</p>
         <p>KARENA KAMU ADALAH ORANG YANG HEBAT</p>
+        <span class="heart">💗💗💗</span>
         <br>
         <img src="https://i.postimg.cc/yxw0S34d/AS003471-00.gif" alt="Forever Love">
         <br>
-        <div class="button-group">
-            <button onclick="goToPage(1)">Kembali</button>
-            <button onclick="goToPage(3)">Lanjut</button>
-        </div>
+        <button onclick="goToPage(3)">Lanjut</button>
+        <!-- Kembali button below -->
+        <button onclick="goToPage(1)">Kembali</button>
     </div>
 
     <!-- Halaman 3 (Video) -->
     <div id="page3" class="container">
         <h2>🎥 You Are Still The One 🎥</h2>
-       <iframe width="240" height="135" src="https://youtube.com/embed/izGgIHKQN8o" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="200px" 
+            src="https://www.youtube.com/embed/izGgIHKQN8o?rel=0&modestbranding=1" 
+            frameborder="0" allowfullscreen>
+        </iframe>
         <br>
-        <div class="button-group">
-            <button onclick="goToPage(2)">Kembali</button>
-            <button onclick="goToPage(4)">Lanjut</button>
-        </div>
+        <button onclick="goToPage(4)">Lanjut</button>
+        <!-- Kembali button below -->
+        <button onclick="goToPage(2)">Kembali</button>
     </div>
 
     <!-- Halaman 4 (GIF dan Terima Kasih) -->
     <div id="page4" class="container">
         <h2>🎉 I MISS YOU 🎉</h2>
         <p>Kenapa Ga Terima?? Bodoamat nyenye</p>
-        <img src="https://i.postimg.cc/vHZNMpXS/8xf09f9880-1.webp" alt="wleee">
+        <img src="https://i.postimg.cc/vHZNMpXS/8xf09f9880-1.webp" alt="wleee"> 
         <br>
-        <div class="button-group">
-            <button onclick="goToPage(3)">Kembali</button>
-        </div>
+        <button onclick="goToPage(5)">Lanjut</button>
+        <button onclick="goToPage(3)">Kembali</button>
+    </div>
+
+    <!-- Halaman 5 (Mulai Tebak-Tebakan) -->
+    <div id="page5" class="container">
+        <h2>Tekan Mulai Untuk Tebak-Tebakan</h2>
+        <p>Klik tombol di bawah untuk mulai.</p>
+        <a href="https://questionforyouu.netlify.app/" target="_blank">
+            <button>Mulai</button>
+        </a>
     </div>
 
     <script>
