--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <!-- Halaman 5 (Mulai Tebak-Tebakan) -->
     <div id="page5" class="container">
-        <h2>Tekan Mulai Untuk Tebak-Tebakan</h2>
+        <h2>Aku Punya Tebak-Tebakan Buat Kamu</h2>
         <p>Klik tombol di bawah untuk mulai.</p>
         <a href="https://questionforyouu.netlify.app/" target="_blank">
             <button>Mulai</button>
